# N4ughtyLLM-Gate

./: AGENTS.md  AICLIENT2API-QUICKSTART.md  CHANGELOG.md  CLIPROXY-QUICKSTART.md  Caddyfile.example  Dockerfile  LICENSE  OTHER_TERMINAL_CLIENTS_USAGE.md  README.md  SKILL.md  SUB2API-QUICKSTART.md  WEBUI-QUICKSTART.md  core-capabilities.md  docker-compose.yml  n4ughtyllm_gate-local.py  pyproject.toml  run_tests.py
.github/: FUNDING.yml
config/: .env.example  README.md  gw_tokens.json.example  security_filters.yaml  upstream_providers.json.example  upstream_routing.json.example
docs/: models.md
logs/: aegisgate.db  audit.jsonl  n4ughtyllm_gate.db
n4ughtyllm_gate/: __init__.py  init_config.py
n4ughtyllm_gate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
n4ughtyllm_gate/adapters/openai_compat/: compat_bridge.py  mapper.py  offload.py  payload_compat.py  pipeline_runtime.py  router.py  sanitize.py  stream_utils.py  upstream.py
n4ughtyllm_gate/adapters/relay_compat/: mapper.py  router.py
n4ughtyllm_gate/adapters/v2_proxy/: __init__.py  router.py
n4ughtyllm_gate/config/: feature_flags.py  redact_values.py  security_level.py  security_rules.py  settings.py
n4ughtyllm_gate/core/: audit.py  background_worker.py  confirmation.py  confirmation_cache_task.py  confirmation_flow.py  context.py  dangerous_response_log.py  errors.py  gateway.py  gateway_auth.py  gateway_keys.py  gateway_network.py  gateway_ui_config.py  gateway_ui_routes.py  gw_tokens.py  hot_reload.py  models.py  pipeline.py  registry.py  security_boundary.py  semantic.py  stats.py  tfidf_model.py  upstream_registry.py
n4ughtyllm_gate/filters/: anomaly_detector.py  base.py  exact_value_redaction.py  injection_detector.py  output_sanitizer.py  post_restore_guard.py  privilege_guard.py  rag_poison_guard.py  redaction.py  request_sanitizer.py  restoration.py  sanitizer.py  system_prompt_guard.py  tool_call_guard.py  untrusted_content_guard.py
n4ughtyllm_gate/models/tfidf/: classifier.joblib  vectorizer.joblib
n4ughtyllm_gate/observability/: __init__.py  logging.py  metrics.py  tracing.py
n4ughtyllm_gate/policies/: policy_engine.py
n4ughtyllm_gate/policies/rules/: default.yaml  permissive.yaml  security_filters.yaml  strict.yaml
n4ughtyllm_gate/storage/: __init__.py  crypto.py  kv.py  offload.py  postgres_store.py  redis_store.py  sqlite_store.py
n4ughtyllm_gate/tests/: test_circuit_breaker.py  test_gateway_boundary_access.py  test_gateway_internal_helpers.py  test_gateway_providers_api.py  test_gateway_register.py  test_internal_header_forwarding.py  test_openai_pipeline_runtime.py  test_passthrough_filter_mode.py  test_pipeline.py  test_security_boundary.py  test_semantic.py  test_streaming_router.py  test_tfidf_model.py  test_upstream_registry.py  test_upstream_routing.py  test_v2_proxy_router.py
n4ughtyllm_gate/util/: base64_detect.py  debug_excerpt.py  logger.py  masking.py  redaction_whitelist.py  risk_scoring.py
scripts/: caddy-entrypoint.sh  local_launcher.py  redeploy.sh  train_tfidf.py  train_tfidf_models.py
www/: index.html  login.html
www/assets/: app.css  app.js  login.js
