[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n4ughtyllm_gate"
version = "0.1.0"
description = "N4ughtyLLM Gate — open-source security gateway for LLM API calls (package name: n4ughtyllm_gate); prompt injection detection, PII redaction, dangerous response sanitization, and audit logging"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = [
  "llm",
  "security",
  "gateway",
  "prompt-injection",
  "pii-redaction",
  "ai-security",
  "openai",
  "mcp",
  "agent",
  "api-proxy",
  "output-sanitization",
  "audit-logging",
  "ai-gateway",
  "llm-firewall",
  "data-loss-prevention",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
  "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/ax128/N4ughtyLLM-Gate"
Repository = "https://github.com/ax128/N4ughtyLLM-Gate"
Issues = "https://github.com/ax128/N4ughtyLLM-Gate/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-timeout>=2.3.0",
]
redis = [
  "redis>=5.0.0",
]
postgres = [
  "psycopg[binary]>=3.1.0",
]
semantic = [
  "scikit-learn>=1.3.0",
  "jieba>=0.42.0",
  "joblib>=1.3.0",
]
observability = [
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["n4ughtyllm_gate/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30

[tool.coverage.run]
source = ["n4ughtyllm_gate"]
omit = ["n4ughtyllm_gate/tests/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
skip_empty = true

[tool.mypy]
# Exclude packaged build artifacts so `mypy .` only checks source modules and
# does not fail on duplicate package names under build/lib.
exclude = '^(build/|dist/|scripts/)'

[[tool.mypy.overrides]]
# Optional/runtime-only dependencies in this project do not ship stubs, so
# type-check source code without blocking on third-party package metadata.
module = [
  "datasets",
  "jieba",
  "joblib",
  "opentelemetry.*",
  "prometheus_client",
  "psycopg",
  "redis",
  "sklearn.*",
  "yaml",
]
ignore_missing_imports = true

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["n4ughtyllm_gate*"]
exclude = ["n4ughtyllm_gate.tests*"]

[tool.setuptools.package-data]
n4ughtyllm_gate = [
  "models/tfidf/*.joblib",
  "policies/rules/*.yaml",
]

[tool.setuptools.exclude-package-data]
n4ughtyllm_gate = [
  "tests/*",
]
